- TODO arena patchouli
- TODO press alt to show blacklist/whitelist

2.4.19
- Make Reflect reflect only forge:direct damage
- Make Arena not blocked by reflection ring and abrahadabra

2.4.18
- Reduce reprint scaling by half
- Tweak drop recipes
- Killer arua mobs can now hurt non-player target
- Fix pandora tooltip
- Arena - Void Touch priority fix

2.4.17
- Add charms for drops
- Add config to allow player summoned entities to have levels and traits
- Make constantly refreshing effects ambient
- Add death tome to blacklist
- Fix Antibuild effect icon
- Fix reflect trait tooltip

2.4.16
- Add more advancements
- Fix Curse of Pride text
- Nameplate render offset
- Fix EnigmaticLegacy compat

2.4.15
- Fix hostility orb not added to player inventory when inventory is full
- Double Curse of Gluttony default drop rate
- Half Hostility essence cost
- Change recipes

2.4.14
- Add event to teleport
- Growth trait slimes won't suffocate
- Fix Rank 0 trait
- Add config to disable entity specific data
- Add Arena effect icon
- Add Ice and Fire dragon default traits
- Add Ars Nouveau enchantment recipe

2.4.13
- Fix more textures
- Fix Drain crash
- Sealed item can still put on curios slot
- Drowned has higher chance to wield trident
- Fix mob drop insane amount of experience
- Add new levels of progression
- Change spawner level bonus from additive to multiplicative
- Prevent creepers from spawning in hostility spawner
- Add Ancient remnant compat
- Add Bosses of Mass Destruction compat
- Add new loot condition for modpack drop display
- Allow whitelist and blacklist to be used together

2.4.12
- add Pocket of Restoration
- Gravity Trait
- Moonwalk Trait
- Counter Strike Trait
- Pulling Trait
- Reprint Trait
- Arena Trait
- make hostility orb to 5x5x5
- Equipment wand can open curios page as well
- Fix difficulty calculation
- Improve difficulty display: add tooltip detail
- Curse of Gluttony drops multiple bottles now
- add Soul Bound to dispell whitelist