@@ -1,7 +1,7 @@
-// 1.20.1	2024-03-16T09:32:46.162458	Registrate Provider for l2hostility [Recipes, Advancements, Loot Tables, Tags (blocks), Tags (items), Tags (fluids), Tags (entity_types), Blockstates, Item models, Lang (en_us/en_ud), Tags (mob_effects), Tags (enchantments), Tags (traits), Patchouli Provider]
+// 1.20.1	2024-03-17T00:32:53.758138	Registrate Provider for l2hostility [Recipes, Advancements, Loot Tables, Tags (blocks), Tags (items), Tags (fluids), Tags (entity_types), Blockstates, Item models, Lang (en_us/en_ud), Tags (mob_effects), Tags (enchantments), Tags (traits), Patchouli Provider]
 d70fdb86a9e889383707aa03fd2b7c8f3faa74cc assets/l2hostility/blockstates/hostility_spawner.json
-75aa94f3055444a5549b621b7b50582379d3f1d5 assets/l2hostility/lang/en_ud.json
-75455daabfd1dfb01d63fcd939cb061be31cfb32 assets/l2hostility/lang/en_us.json
+0326c035a2cf9246011cf28d7af7aa025299ad76 assets/l2hostility/lang/en_ud.json
+c6a96ae3dd6f4d2d6624b60ce95c4702cb96d2d3 assets/l2hostility/lang/en_us.json
 55c31fd97776999c18d0f2503db0ab0f48f978ca assets/l2hostility/models/block/hostility_spawner.json
 de5c51bce5800765c4480502c92b16feb891e135 assets/l2hostility/models/block/hostility_spawner_activated.json
 4fc08943953876aaddfa8b72bdf177b446377ce1 assets/l2hostility/models/block/hostility_spawner_clear.json
