@@ -55,6 +55,7 @@
   "advancements.l2hostility.advancements.hostility.trait.title": "pןɹoM ʍǝN ǝɥʇ oʇ ǝʇɐ⅁",
   "advancements.l2hostility.advancements.hostility.wrath.description": "ɥʇɐɹM ɟo ǝsɹnƆ uıɐʇqO",
   "advancements.l2hostility.advancements.hostility.wrath.title": "ǝɯı⟘ ǝbuǝʌǝᴚ",
+  "attribute.name.extra_difficulty": "ʎʇןnɔıɟɟıᗡ ɐɹʇxƎ",
   "block.l2hostility.hostility_spawner": "ɹǝuʍɐdS ʎʇıןıʇsoH",
   "config.jade.plugin_l2hostility.mob": "ʎʇıןıʇsoHᄅꞀ",
   "curios.identifier.hostility_curse": "ǝsɹnƆ - ʎʇıןıʇsoHᄅꞀ",
@@ -290,7 +291,7 @@
   "trait.l2hostility.reprint": "ʇuıɹdǝᴚ",
   "trait.l2hostility.reprint.desc": "ʇuıod ʇuǝɯʇuɐɥɔuǝ ɹǝd ǝbɐɯɐp ǝɹoɯ %s ןɐǝp puɐ 'sʇuǝɯʇuɐɥɔuǝ ʇǝbɹɐʇ ʎdoɔ ןןıʍ qoW",
   "trait.l2hostility.shulker": "ɹǝʞןnɥS",
-  "trait.l2hostility.shulker.desc": "spuoɔǝs %s ʎɹǝʌǝ sʇǝןןnq ʇooɥS",
+  "trait.l2hostility.shulker.desc": "˙sɹɐǝddɐsıp ʇǝןןnq snoıʌǝɹd ǝɥʇ ɹǝʇɟɐ spuoɔǝs %s ʎɹǝʌǝ sʇǝןןnq ʇooɥS",
   "trait.l2hostility.slowness": "ʎɐɹʇS",
   "trait.l2hostility.soul_burner": "ɹǝuɹnᗺ ןnoS",
   "trait.l2hostility.speedy": "ʎpǝǝdS",
