@@ -55,6 +55,7 @@
   "advancements.l2hostility.advancements.hostility.trait.title": "Gate to the New World",
   "advancements.l2hostility.advancements.hostility.wrath.description": "Obtain Curse of Wrath",
   "advancements.l2hostility.advancements.hostility.wrath.title": "Revenge Time",
+  "attribute.name.extra_difficulty": "Extra Difficulty",
   "block.l2hostility.hostility_spawner": "Hostility Spawner",
   "config.jade.plugin_l2hostility.mob": "L2Hostility",
   "curios.identifier.hostility_curse": "L2Hostility - Curse",
@@ -290,7 +291,7 @@
   "trait.l2hostility.reprint": "Reprint",
   "trait.l2hostility.reprint.desc": "Mob will copy target enchantments, and deal %s more damage per enchantment point",
   "trait.l2hostility.shulker": "Shulker",
-  "trait.l2hostility.shulker.desc": "Shoot bullets every %s seconds",
+  "trait.l2hostility.shulker.desc": "Shoot bullets every %s seconds after the previous bullet disappears.",
   "trait.l2hostility.slowness": "Stray",
   "trait.l2hostility.soul_burner": "Soul Burner",
   "trait.l2hostility.speedy": "Speedy",
