@@ -101,7 +101,7 @@
 	"grenade": "榴弹",
 	"grenade.desc": "发射会爆炸的潜影榴弹，不会破坏方块。上一个子弹消失后%s秒发射下一个。",
 	"shulker": "潜影",
-	"shulker.desc": "每%s秒发射潜影子弹",
+	"shulker.desc": "发射潜影子弹。上一个子弹消失后%s秒发射下一个",
 	"growth": "生长",
 	"growth.desc": "史莱姆自动获得再生词条，满血时长大",
 	"split": "分裂",
